Start the repl with options biased towards perforamnce rather than startup time.